Closed Bug 311908 Opened 20 years ago Closed 20 years ago

Oracle Jinitiator Plugin no longer loads

Categories

(Core Graveyard :: Plug-ins, defect, P1)

defect

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.9alpha1

People

(Reporter: iannbugzilla, Assigned: Biesinger)

References

Details

(Keywords: ecommerce, regression)

Attachments

(2 files)

For builds from BuildID 2005092205 onwards the Oracle Jinitiator plugin no longer loads meaning that mozilla web browsers built from trees after that date cannot be used to access Oracle web-enabled applications. I suspect that it was the checkin for bug 1156 that broke this.
This html is generated by the oracle system and should then cause the Oracle Jinitiator plugin to load up.
gah, an <embed> with no src attribute... copying from DOMI: <EMBED width="558" height="120" orbdisablelocator="true" boxprogresscolor="0,255,0" boxfgcolor="black" boxbgcolor="gray" boxmessage="Downloading Oracle Applications 11i jar files..." progressbar="true" image="" cursorblinkrate="600" nlslang="true" heartbeat="2" imagebase="CodeBase" donttruncatetabs="true" background="no" readonlybackground="automatic" darklook="true" splashscreen="oracle/apps/media/splash.gif" lookandfeel="oracle" colorscheme="blue" serveruserparams="NLS_LANG='AMERICAN_AMERICA.US7ASCII' FORMS60_USER_DATE_FORMAT='DD-MON-RRRR' FORMS60_USER_DATETIME_FORMAT='DD-MON-RRRR HH24:MI:SS' NLS_DATE_LANGUAGE='AMERICAN'" serverargs="module=/app/jepfinl/app11i/jepfinlappl/fnd/11.5.0/forms/US/FNDSCSGN userid=APPLSYSPUB/PUB@JEPFINL fndnam=APPS config='hou1_jepfinl' icx_ticket='.421287765' resp='SQLGL/JHA_GL_ENQUIRY' secgrp='STANDARD' " registrypath="/OA_JAVA/oracle/apps/fnd/formsClient" serverapp="OracleApplications" networkretries="0" connectmode="socket" serverport="9005" serverhost="hou3.jephson.org" serverurl="" separateframe="true" archive="/OA_JAVA/oracle/apps/fnd/jar/fndforms.jar,/OA_JAVA/oracle/apps/fnd/jar/fndformsi18n.jar,/OA_JAVA/oracle/apps/fnd/jar/fndewt.jar,/OA_JAVA/oracle/apps/fnd/jar/fndswing.jar,/OA_JAVA/oracle/apps/fnd/jar/fndbalishare.jar,/OA_JAVA/oracle/apps/fnd/jar/fndaol.jar,/OA_JAVA/oracle/apps/fnd/jar/fndctx.jar,/OA_JAVA/oracle/apps/fnd/jar/fndlist.jar" code="oracle.forms.engine.Main" codebase="/OA_JAVA/" pluginurl="http://www.javasoft.com/" legacy_lifecycle="false" type="application/x-java-applet;jpi-version=1.4.1"/>
Attached patch patch — — Splinter Review
Can you test this patch?
Assignee: nobody → cbiesinger
Status: NEW → ASSIGNED
Blocks: 1156
Priority: -- → P1
Target Milestone: --- → mozilla1.9alpha
Comment on attachment 199080 [details] [diff] [review] patch Yeah tested and Jinitiator now works again, thanks :-)
Attachment #199080 - Flags: superreview?(bzbarsky)
Attachment #199080 - Flags: review?(bzbarsky)
Comment on attachment 199080 [details] [diff] [review] patch r+sr=bzbarsky, and let's hope people don't do this with <applet>. ;)
Attachment #199080 - Flags: superreview?(bzbarsky)
Attachment #199080 - Flags: superreview+
Attachment #199080 - Flags: review?(bzbarsky)
Attachment #199080 - Flags: review+
yeah... i think for <applet> it's really unlikely that people would do it. fixed on trunk Checking in content/html/content/src/nsHTMLSharedElement.cpp; /cvsroot/mozilla/content/html/content/src/nsHTMLSharedElement.cpp,v <-- nsHTMLSharedElement.cpp new revision: 1.55; previous revision: 1.54 done
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
*** Bug 312256 has been marked as a duplicate of this bug. ***
*** Bug 329010 has been marked as a duplicate of this bug. ***
(In reply to comment #8) > *** Bug 329010 has been marked as a duplicate of this bug. *** > Can anyone tell me how to apply the patch provided by Christian?
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: