bug 311908 try to instantiate <embed> plugins even when there is no src attribute r+sr=bz